# ai_labs_assessment

./: .gitignore  BrenJayMagtalas_AILabs_Assessment.pptx  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/processed/: city_pvout.pkl  encoders.pkl  feature_cols.pkl  holdout_weather.csv  results_checkpoint.json
models/: sunshine_predictor_meta.json  test_predictions.csv
notebooks/: 01_solar_exploration.ipynb  02_ocr_exploration.ipynb
src/: app.py
src/challenge_1_solar/: agent copy.py  agent.py  model.py  schemas.py  tools.py
src/challenge_2_receipts/: graph.py  ocr.py  pipelines.py  schemas.py
