[project]
name = "ai-labs-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "geopandas>=1.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.0",
]
